--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -12,13 +12,17 @@
 
 /*   --------------------------------------------------------------------------------------   */
 /*   -HEADER-   */
+
+/*   -HEADER-   */
 #header {
     background-image: url("../../images/Section HERO/nav.png");
     background-size: cover;
-    position: sticky;
+    position: fixed; 
+    display: flex;
+    flex-direction: column;
     height: 100px;
-    width: 100%; 
-    z-index:1000 ;
+    width: 80%; 
+    z-index:100;
     transition: all 0.3s ease;  /* Transición suave para cambios de estilo */
     top: 0;
 }
@@ -82,6 +86,7 @@
     box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.6);
     opacity: 0; /* Oculto inicialmente */
     animation: fade-in 0.3s ease forwards;
+    z-index: 0; 
   
 }
 #menu-abierto p {
