--- a/assets/css/sections/hero.css
+++ b/assets/css/sections/hero.css
@@ -21,7 +21,8 @@
     display: flex;
     flex-direction: column;
     height: 100px;
-    width: 80%; 
+    width: 100%; 
+    max-width: 1080px;
     z-index:100;
     transition: all 0.3s ease;  /* Transición suave para cambios de estilo */
     top: 0;
